--- a/lang-portal/frontend-react/public/games/base-game/index.html
+++ b/lang-portal/frontend-react/public/games/base-game/index.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Kanji Snake</title>
+    <title>Base Game - Development</title>
+    <script type="module" crossorigin src="/assets/main-Cowzvq8B.js"></script>
+    <link rel="stylesheet" crossorigin href="/assets/main-CdBsaSp5.css">
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/index.tsx"></script>
   </body>
 </html> 
