improved presentation of games screen

--- a/lang-portal/frontend-react/public/games/kanji-snake/index.html
+++ b/lang-portal/frontend-react/public/games/kanji-snake/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kanji Snake</title>
-    <script type="module" crossorigin src="./assets/main-CFG6kdYy.js"></script>
-    <link rel="stylesheet" crossorigin href="./assets/main-CdBsaSp5.css">
+    <script type="module" crossorigin src="./assets/main-C8TqOFAB.js"></script>
+    <link rel="stylesheet" crossorigin href="./assets/main-DGKk_4WY.css">
   </head>
   <body>
     <div id="root"></div>
