Implement base scene management system for Phaser game
- Added BaseScene class to provide common scene functionality
- Created SceneRegistry to manage scene transitions and global game state
- Implemented AssetManager for centralized asset loading and management
- Added TestScene to verify scene management system
- Updated game.js to support dynamic scene loading
- Enhanced static file serving to include new scene scripts
- Updated index.html to include scene management scripts
- Prepared foundation for future scene development and game state tracking

--- a/visual-novel/static/index.html
+++ b/visual-novel/static/index.html
@@ -25,6 +25,14 @@
 </head>
 <body>
     <div id="game-container"></div>
+    
+    <!-- Scene Management System -->
+    <script src="js/scenes/BaseScene.js"></script>
+    <script src="js/scenes/SceneRegistry.js"></script>
+    <script src="js/scenes/AssetManager.js"></script>
+    <script src="js/scenes/TestScene.js"></script>
+    <script src="js/scenes/loader.js"></script>
+    
     <!-- Phaser will be loaded by Streamlit -->
     <!-- Game script will be loaded by Streamlit -->
 </body>
