After running into issues with the Phaser game, consulted a project from a previous week in which Phaser development was successful.  Asked AI to write a how-to document and fed it to the AI in the new project. Developed a feature plan to migrating current game to the new best-practices outlined in the how-to document.

--- a/visual-novel/static/index.html
+++ b/visual-novel/static/index.html
@@ -18,8 +18,8 @@
         #game-container {
             width: 100%;
             height: 100%;
-            max-width: 1280px;
-            max-height: 720px;
+            max-width: 1200px;
+            max-height: 800px;
         }
     </style>
 </head>
@@ -31,6 +31,7 @@
     <script src="js/scenes/SceneRegistry.js"></script>
     <script src="js/scenes/AssetManager.js"></script>
     <script src="js/scenes/TestScene.js"></script>
+    <script src="js/scenes/TitleScene.js"></script>
     <script src="js/scenes/loader.js"></script>
     
     <!-- Phaser will be loaded by Streamlit -->
