--- a/visual-novel/phaser_game/index.html
+++ b/visual-novel/phaser_game/index.html
@@ -14,14 +14,24 @@
       height: 100vh;
       background-color: #333;
     }
-    #game-container {
+    #game-wrapper {
+      position: relative;
       width: 1200px;
       height: 800px;
+    }
+    #game-container {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
     }
   </style>
 </head>
 <body>
-  <div id="game-container"></div>
+  <div id="game-wrapper">
+    <div id="game-container"></div>
+  </div>
   <script type="module" src="/src/index.ts"></script>
 </body>
 </html> 
